# pba-assignment-fluids

./: .gitignore  README.md  imgui.ini  main.py  pyproject.toml  sim_wrapper.py  simulator.py
assignment/: __init__.py  advect.py  apply_gravity.py  compute_rhs_divergence.py  g2p.py  gauss_seidel_sor_pressure_iteration.py  jacobi_pressure_iteration.py  p2g.py  pressure_projection.py
blender/: renderer.blend
tests/: lots_of_fluid.json  maze.json  sample_scene_hires.json  sample_scene_lores.json  waterfall.json
utils/: __init__.py  engine_utils.py  gauss_seidel_sor_pressure_iteration.py  given_kernels.py  sample_blue_noise.py  sample_grid.py  sample_jittered_grid.py  sample_random.py  scene.py  structs.py  usdmultimeshwriter.py
